tests/e2e/not_allowed/final.error
Error: syntax error in story at line 1, column 1

1|    final = 1
      ^^^^^

E0030: `final` is reserved for future use
